--- a/apps/website/templates/website/base.html
+++ b/apps/website/templates/website/base.html
@@ -17,21 +17,23 @@
     <meta name="author" content="Ruben Caballero">
 
     {# Block title with default #}
-    <title>{% block title %}👨‍💻Ruveloper{% endblock title %}</title>
+    <title>{% block title %}Developer{% endblock title %}</title>
 
     {# Favicon #}
-    <link rel="icon" href="{% static 'website/img/favicon.png' %}" type="image/x-icon">
-    <link rel="apple-touch-icon" href="{% static 'website/img/apple-touch-icon.png' %}">
+    <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon">
+    <link rel="apple-touch-icon" href="{% static 'img/logo.png' %}">
 
     {# ----------------------------- STYLESHEETS - CSS -----------------------------#}
     {% block css %}
         <!--  VENDOR MINIFIED CSS -->
+        {# Font Awesome from python/django package #}
+        <link href="{% static 'fontawesomefree/css/all.min.css' %}" rel="stylesheet" type="text/css">
 
         <!-- MAIN CSS -->
         {% tailwind_css %}
 
         {% compress css %}
-            <link rel="stylesheet" href="{% static 'website/css/base.css' %}">
+            <link rel="stylesheet" href="{% static 'css/main.css' %}">
         {% endcompress %}
     {% endblock css %}
 
@@ -39,30 +41,117 @@
     {# Placed at the top of the document. Pages load faster and at the end execute the scripts (defer) #}
     {% block javascript %}
         <!-- VENDOR MINIFIED JS -->
+        <script defer src="{% static 'js/vendor/typed.min.js' %}"></script>
+        {# Flowbite script #}
+        <script defer src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
 
         <!-- Main JS -->
         {% compress js %}
-            <script defer src="{% static 'website/js/base.js' %}"></script>
+            <script defer src="{% static 'js/main.js' %}"></script>
+            <script defer src="{% static 'js/background_animated_gradient.js' %}"></script>
         {% endcompress %}
     {% endblock javascript %}
 
 </head>
-<body class="bg-gray-50 font-serif leading-normal tracking-normal">
 
+<body class="bg-gray-50 font-sans leading-relaxed tracking-normal">
 <!-----------------------------------------------------------------------------------------------
-    Header and Navbar
+    Navbar
 ------------------------------------------------------------------------------------------------->
-<header id="header">
+<header id="navbar">
     {% block header %}
+        <nav class="w-screen md:h-16 px-4 py-2.5
+        fixed top-0 z-10 bg-gray-300 bg-opacity-30 backdrop-filter backdrop-blur-lg drop-shadow-lg">
+            <div class="container h-full flex flex-wrap justify-between items-center mx-auto
+            font-bold text-xl text-white">
+                {# -------- Developer link -------- #}
+                <a href="/" class="flex items-center">
+                    <span class="self-center text-xl font-semibold">developer</span>
+                </a>
+                <div class="flex items-center gap-x-3 md:order-2">
+                    {# -------- Social links -------- #}
+                    <a href="https://github.com/dev-user" target="_blank"
+                       data-tooltip-target="tooltip-github" data-tooltip-placement="bottom" data-tooltip-style="light">
+                        <i class="fa-brands fa-github fa-lg"></i>
+                        <div id="tooltip-github" role="tooltip"
+                             class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 shadow-sm opacity-0 tooltip">
+                            Github
+                            <div class="tooltip-arrow" data-popper-arrow></div>
+                        </div>
+                    </a>
+                    <a href="https://www.linkedin.com/in/dev-user" target="_blank"
+                       data-tooltip-target="tooltip-linkedin" data-tooltip-placement="bottom" data-tooltip-style="light">
+                        <i class="fa-brands fa-linkedin fa-lg"></i>
+                        <div id="tooltip-linkedin" role="tooltip"
+                             class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 shadow-sm opacity-0 tooltip">
+                            Linkedin
+                            <div class="tooltip-arrow" data-popper-arrow></div>
+                        </div>
+                    </a>
+
+                    {# -------- Menu button -------- #}
+                    <button data-collapse-toggle="mobile-menu" type="button"
+                            class="inline-flex items-center p-2 text-md rounded-lg md:hidden
+                            hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+                            aria-controls="" aria-expanded="false">
+                        <span class="sr-only">Menu</span>
+                        <i class="fa-solid fa-bars"></i>
+                    </button>
+                </div>
+                {# -------- Menu entries -------- #}
+                <div id="mobile-menu" class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1">
+                    <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0
+                    font-bold text-xl text-white ">
+                        {# Add aria current if view_name match with the element url #}
+                        {% with request.resolver_match.view_name as view_name %}
+                            <li>
+                                <a href="{% url 'website:home' %}" class="block
+                                py-2 pr-4 pl-3 border-b border-gray-100 hover:bg-white hover:bg-opacity-30
+                                md:px-3 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
+                                        {% if view_name == 'website:home' %} aria-current="page" {% endif %}
+                                >Home</a>
+                            </li>
+                            <li>
+                                <a href="/about" class="block
+                                py-2 pr-4 pl-3 border-b border-gray-100 hover:bg-white hover:bg-opacity-30
+                                md:px-3 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
+                                        {% if view_name == 'website:about' %} aria-current="page" {% endif %}
+                                >About</a>
+                            </li>
+                            <li>
+                                <a href="/projects" class="block
+                                py-2 pr-4 pl-3 border-b border-gray-100 hover:bg-white hover:bg-opacity-30
+                                md:px-2 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
+                                        {% if view_name == 'website:projects' %} aria-current="page" {% endif %}
+                                >Projects</a>
+                            </li>
+                            <li>
+                                <a href="/contact" class="block
+                                py-2 pr-4 pl-3 border-b border-gray-100 hover:bg-white hover:bg-opacity-30
+                                md:px-3 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
+                                >Contact</a>
+                            </li>
+                        {% endwith %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
     {% endblock header %}
 </header>
 
 <!-----------------------------------------------------------------------------------------------
     Main Content
 ------------------------------------------------------------------------------------------------->
-<main id="main">
-    {% block main-content %}
-    {% endblock main-content %}
+<main id="main" class="w-full h-fit relative ">
+    {# -------- Background -------- #}
+    <canvas id="base-canvas-animated-gradient"
+            class="w-full h-screen bg-gradient-to-r from-violet-500 to-sky-500"></canvas>
+
+    {# ------- Main content ------- #}
+    <div class="w-full absolute top-0">
+        {% block main-content %}
+        {% endblock main-content %}
+    </div>
 </main>
 
 <!-----------------------------------------------------------------------------------------------
@@ -76,7 +165,8 @@
 <!-----------------------------------------------------------------------------------------------
     Inline Javascript
 ------------------------------------------------------------------------------------------------->
-{% block inline_javascript %}{% endblock inline_javascript %}
+{% block inline_javascript %}
+{% endblock inline_javascript %}
 
 {# -------------------------------------------- END -------------------------------------------- #}
 </body>
