--- a/apps/website/static/css/main.css
+++ b/apps/website/static/css/main.css
@@ -32,3 +32,11 @@
     background: white;
     clip-path: polygon(0 90%, 100% 65%, 100% 100%, 0% 100%);
 }
+
+/* ----- Section page styles ----- */
+.page-radial-cut {
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    background: radial-gradient(circle at 50% 0, transparent 4.9rem, white 4.9rem) no-repeat bottom left;
+}
