--- a/apps/website/templates/website/pages/project_detail_page.html
+++ b/apps/website/templates/website/pages/project_detail_page.html
@@ -33,7 +33,7 @@ PARAMETERS:
                 <i class="text-gray-400 fa-solid fa-angle-right"></i>
                 <a href="{% url 'website:projects' %}" class="hover:text-gray-900">Projects</a>
                 <i class="text-gray-400 fa-solid fa-angle-right"></i>
-                <a href="" class="text-blue-500">Example Project</a>
+                <a href="" class="text-blue-500">Project Name</a>
             </div>
             <div class="grow-0 text-lg md:text-3xl">
                 <a href=""><i class="fa-solid fa-arrow-right"></i></a>
@@ -44,8 +44,7 @@ PARAMETERS:
 
         {# ---- Detail ---- #}
         <div class="text-content">
-            <h2 id="project-title" class="mb-2 font-bold text-2xl text-gray-800">Example Project Description in
-                Markdown</h2>
+            <h2 id="project-title" class="mb-2 font-bold text-2xl text-gray-800">Project Name</h2>
             <div id="project-detail">
                 <p>
                     <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam,
