--- a/apps/website/templates/website/pages/contact_page.html
+++ b/apps/website/templates/website/pages/contact_page.html
@@ -23,10 +23,11 @@ PARAMETERS:
         {% include 'website/components/icon_header.html' with icon_name="fa-solid fa-paper-plane" %}
 
         {# -------- Section Content -------- #}
+        {# ---- Title ---- #}
+        <h2 class="w-full mb-10 text-4xl text-center lg:text-5xl font-bold leading-tight">Let's talk!</h2>
 
         {# ---- Contact ---- #}
         <div class="w-full grid gap-8 grid-cols-1 md:grid-cols-2 mx-auto text-gray-900">
-            <h2 class="w-full col-span-2 mb-10 text-4xl text-center lg:text-5xl font-bold leading-tight">Let's talk!</h2>
             <div class="flex flex-col justify-between">
                 <div class="text-center">
                     <p>Prefer email me?</p>
