--- a/apps/website/static/css/main.css
+++ b/apps/website/static/css/main.css
@@ -22,14 +22,14 @@
 }
 
 /* --------- Home styles --------- */
-.home-clip-path::before {
+.home-clip-path::after {
     display: block;
     content: '';
     position: absolute;
     top: 0;
     width: 100%;
     height: 100%;
-    background: white;
+    background: rgb(249,250,251);
     clip-path: polygon(0 90%, 100% 65%, 100% 100%, 0% 100%);
 }
 
