Added Information Modal on HomePage

--- a/apps/website/static/css/main.css
+++ b/apps/website/static/css/main.css
@@ -22,7 +22,7 @@
 }
 
 /* --------- Home styles --------- */
-.home-clip-path::after {
+.background-clip-path::after {
     display: block;
     content: '';
     position: absolute;
