--- a/apps/website/templates/website/pages/home_page.html
+++ b/apps/website/templates/website/pages/home_page.html
@@ -18,11 +18,11 @@
             <div class="container md:h-screen mx-auto flex flex-col">
 
                 {# -------- Logo image -------- #}
-                <img class="max-w-fit
+                <img class="max-w-fit max-h-20 md:max-h-36 lg:max-h-44 xl:max-h-52
                 mx-2 mt-10 lg:mt-0
-                translate-y-8 md:translate-y-12 lg:translate-y-24 xl:translate-y-32
-                max-h-20 md:max-h-36 lg:max-h-44 xl:max-h-52"
-                     src="{% static 'img/Logo.svg' %}" alt="">
+                translate-y-8 md:translate-y-12 lg:translate-y-24 xl:translate-y-32"
+                     src="{% if cms_base.logo %} {{ cms_base.logo.url }} {% else %} {% static 'img/Logo.svg' %} {% endif %}"
+                     alt="Developer logo">
 
                 {# -------- Glass Card -------- #}
                 <div class="text-gray-800
