--- a/apps/website/templates/website/pages/projects_page.html
+++ b/apps/website/templates/website/pages/projects_page.html
@@ -2,13 +2,14 @@
 
 {% comment %}
 PARAMETERS:
+    * cms_projects: QuerySet[Project] --> QuerySet of Project model objects
 {% endcomment %}
 
 {# LOAD PACKAGES/TAGs #}
 {% load static %}
 
 {# Website title #}
-{% block title %}{{ block.super }} - Sobre mí{% endblock %}
+{% block title %}Projects | {{ block.super }}{% endblock %}
 
 {# -------------------------------- WEBPAGE CONTENT -------------------------------- #}
 {% block main-content %}
@@ -27,11 +28,9 @@ PARAMETERS:
         {# ---- Cards ---- #}
         <div id="projects" class="w-full flex flex-row flex-wrap gap-y-5">
 
-            {# TODO: Remove FOR - Example simulating multiple projects #}
+            {% for project in cms_projects %}
 
-            {% for project_id in '012345678'|make_list %}
-
-                <div id="project-{{ project_id }}"
+                <div id="project-{{ project.id }}"
                      class="w-full px-3 group
                             md:w-1/3 md:h-52
                             md:focus-within:w-full md:focus-within:h-auto md:focus-within:mb-10
@@ -45,11 +44,17 @@ PARAMETERS:
                                     md:group-focus-within:rounded-none md:group-focus-within:rounded-l-lg
                                     md:group-focus-within:shadow-lg
                                     md:group-focus-within:hover:scale-100 md:group-focus-within:transition-none"
-                            onfocus='scrollToIdWithDelay("project-{{ project_id }}", 300)'>
+                            onfocus='scrollToIdWithDelay("project-{{ project.id }}", 300)'>
 
                         {# ---- Project image ---- #}
-                        <img class="w-full h-full object-cover shimmer-loading-background"
-                             src="https://picsum.photos/500/300" alt="">
+                        <picture>
+                            <source srcset="
+                                    {% if project.cover_image_webp %}{{ project.cover_image_webp.url }}{% endif %}"
+                                    type="image/webp">
+                            <img class="w-full h-full object-cover shimmer-loading-background"
+                                 src="{{ project.cover_image.url }}" alt="">
+                        </picture>
+
 
                         {# ---- Project Card info ---- #}
                         <div class="hidden absolute inset-0
@@ -58,24 +63,18 @@ PARAMETERS:
 
                             {# Title #}
                             <h2 class="w-full h-fit p-2 font-bold text-white bg-gray-800 bg-opacity-50">
-                                Project Title</h2>
+                                {{ project.title }}</h2>
 
                             {# Technologies #}
                             <div class="w-full h-fit p-2 flex flex-row flex-wrap gap-2 justify-end items-center">
-                                <img class="h-8 object-contain"
-                                     src="{% static 'img/logos/python.svg' %}"
-                                     alt="python">
-                                <img class="h-8 object-contain"
-                                     src="{% static 'img/logos/django.svg' %}"
-                                     alt="django">
-                                <img class="h-8 object-contain"
-                                     src="{% static 'img/logos/tailwind.svg' %}"
-                                     alt="tailwind">
+                                {% for technology in project.technology_set.all %}
+                                    <img class="h-8 object-contain"
+                                         src="{{ technology.logo.url }}"
+                                         alt="{{ technology.name }}">
+                                {% endfor %}
                             </div>
 
                         </div>
-
-
                     </button>
 
                     <div class="w-full p-6 flex flex-col text-gray-600 text-left rounded-b-lg shadow-lg
@@ -85,47 +84,35 @@ PARAMETERS:
                                 md:group-focus-within:rounded-r-lg md:group-focus-within:shadow-lg">
 
                         {# ---- Title ---- #}
-                        <h2 class="mb-2 font-bold text-2xl text-gray-800">Project Title</h2>
+                        <h2 class="mb-2 font-bold text-2xl text-gray-800">{{ project.title }}</h2>
 
                         {# ---- Description ---- #}
                         <div id="project-detail" class="text-content">
-                            <p>
-                                    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad beatae deserunt
-                                        eos error iusto minima tempore. Alias, culpa deserunt distinctio, earum, et in
-                                        ipsa nesciunt non nulla officia unde vel!. Alias, culpa deserunt distinctio, earum, et in
-                                        ipsa nesciunt non nulla officia unde vel!</span>
-                            </p>
+                            <p>{{ project.description|safe }}</p>
                         </div>
 
                         {# Technologies #}
                         <div class="w-full p-5 flex flex-row flex-wrap gap-2 justify-end items-center">
-                            <div>
-                                <img class="h-8 mx-auto object-contain" src="{% static 'img/logos/python.svg' %}"
-                                     alt="python">
-                                <p class="px-2 pt-2 text-sm text-center font-semibold">Python</p>
-                            </div>
-                            <div>
-                                <img class="h-8 mx-auto object-contain" src="{% static 'img/logos/django.svg' %}"
-                                     alt="django">
-                                <p class="px-2 pt-2 text-sm text-center font-semibold">Django</p>
-                            </div>
-                            <div>
-                                <img class="h-8 mx-auto object-contain" src="{% static 'img/logos/tailwind.svg' %}"
-                                     alt="tailwind">
-                                <p class="px-2 pt-2 text-sm text-center font-semibold">Tailwind</p>
-                            </div>
+                            {% for technology in project.technology_set.all %}
+                                <div>
+                                    <img class="h-8 mx-auto object-contain"
+                                         src="{{ technology.logo.url }}"
+                                         alt="{{ technology.name|lower }}">
+                                    <p class="px-2 pt-2 text-sm text-center font-semibold">
+                                        {{ technology.name }}</p>
+                                </div>
+                            {% endfor %}
                         </div>
 
                         <div class="flex justify-center items-center">
                             <a class="py-2 px-8 font-medium border border-blue-600 text-blue-600 rounded-xl
                                         hover:bg-blue-600 hover:text-white transition-all duration-300"
-                               href="{% url 'website:project_detail' project_slug='project_example' %}">
-                                <i class="fa-solid fa-circle-plus mr-2"></i>Ver más</a>
+                               href="{{ project.get_absolute_url }}">
+                                <i class="fa-solid fa-circle-plus mr-2"></i>See more</a>
                         </div>
                     </div>
 
                 </div>
-
 
             {% endfor %}
 
