--- a/apps/website/templates/website/pages/contact_page.html
+++ b/apps/website/templates/website/pages/contact_page.html
@@ -1,9 +1,5 @@
 {% extends 'website/base.html' %}
 
-{% comment %}
-PARAMETERS:
-{% endcomment %}
-
 {# LOAD PACKAGES/TAGs #}
 {% load static %}
 
@@ -28,6 +24,7 @@ PARAMETERS:
 
         {# ---- Contact ---- #}
         <div class="w-full grid gap-8 grid-cols-1 md:grid-cols-2 mx-auto text-gray-900">
+
             <div class="flex flex-col justify-between">
                 <div class="text-center">
                     <p>Prefer email me?</p>
@@ -46,45 +43,15 @@ PARAMETERS:
                     <img src="{% static 'img/contact.svg' %}" alt="">
                 </div>
             </div>
-            <form class="flex flex-col justify-center">
-                <div>
-                    <label for="name" class="block mb-1 text-sm font-medium text-red-700 ">Your name</label>
-                    <input type="text" id="name"
-                           class="block w-full p-2.5 text-sm rounded-lg
-                                   bg-red-50 border border-red-500 text-red-900
-                                   focus:ring-red-500 focus:border-red-500">
-                    <p class="mt-2 text-right text-sm text-red-600">Some error message.</p>
-                </div>
-                <div class="mb-6">
-                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900
-                                                after:content-['*'] after:ml-0.5 after:text-red-500">Email</label>
-                    <input type="email" id="email"
-                           class="block w-full p-2.5 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg
-                           focus:ring-blue-500 focus:border-blue-500" required>
-                </div>
-                <div class="mb-6">
-                    <label for="subject" class="block mb-2 text-sm font-medium text-gray-900">Subject</label>
-                    <input type="text" id="subject"
-                           class="block w-full p-2.5 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg
-                           focus:ring-blue-500 focus:border-blue-500">
-                </div>
-                <div class="mb-6">
-                    <label for="message" class="block mb-2 text-sm font-medium text-gray-900
-                                                after:content-['*'] after:ml-0.5 after:text-red-500">Your
-                        message</label>
-                    <textarea id="message" rows="4"
-                              class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300
-                                        focus:ring-blue-500 focus:border-blue-500" required></textarea>
 
-                </div>
-                <div>
-                    <button type="submit" class="w-full sm:w-auto px-5 py-2.5 bg-blue-700 hover:bg-blue-800 rounded-lg
-                                                text-center text-sm text-white font-medium
-                                                focus:ring-4 focus:outline-none focus:ring-blue-300 ">
-                        Send message
-                    </button>
-                </div>
-            </form>
+            {# * ----------- CONTACT FORM ------------ #}
+            <div class="flex flex-col justify-center">
+                {% include 'website/components/contact_form.html' with form=form %}
+            </div>
+
+            {# * ----------- MODAL CONTACT ON SUCCESS ------------ #}
+            {% include 'website/components/modal_contact_success.html' %}
+
         </div>
 
     </section>
