Add Tailwind Typography to project detail in order to allow the styles from the WYSIWYG editor

--- a/apps/website/templates/website/components/tech_stack.html
+++ b/apps/website/templates/website/components/tech_stack.html
@@ -55,7 +55,7 @@ PARAMETERS
     </ul>
 </div>
 
-<div id="techTabContent">
+<div id="techTabContent" class="max-w-3xl mx-auto">
 
     {# ------------- Techology descriptions ------------- #}
     {% for technology in technologies %}
