--- a/apps/website/templates/website/pages/project_detail_page.html
+++ b/apps/website/templates/website/pages/project_detail_page.html
@@ -19,7 +19,7 @@ PARAMETERS:
     <!------------------------------------------------------------------------------
     About Page Section
     -------------------------------------------------------------------------------->
-    <section class="container mx-auto mt-40 mb-10 px-5 md:px-10 lg:px-20 pb-10 rounded-xl bg-white shadow-xl
+    <section class="container max-w-5xl mx-auto mt-40 mb-10 px-5 md:px-10 lg:px-20 pb-10 rounded-xl bg-white shadow-xl
     page-radial-cut">
 
         {# -------- Section icon -------- #}
@@ -52,11 +52,8 @@ PARAMETERS:
 
         {# -------- Section Content -------- #}
 
-        {# ---- Detail ---- #}
-        <div class="text-content">
-            <h2 id="project-title" class="mb-2 font-bold text-2xl text-gray-800">{{ project.title }}</h2>
-            <div id="project-detail"> {{ project.detail|safe }} </div>
-        </div>
+        {# * ---- Project Detail ---- #}
+        <div id="project-detail" class="prose prose-slate max-w-[80ch] mx-auto"> {{ project.detail|safe }} </div>
 
     </section>
 
